[gd_scene load_steps=10 format=3 uid="uid://chtd6kwvrg1bq"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_64u2j"]
[ext_resource type="Texture2D" uid="uid://c1gci30qx8x1y" path="res://sprites/TelaInicioPortaFadeRadial.png" id="2_jmh02"]
[ext_resource type="AudioStream" uid="uid://6j5qt5ylwnjo" path="res://audio/musica menu.wav" id="3_dsvls"]

[sub_resource type="SystemFont" id="SystemFont_vlcng"]
font_names = PackedStringArray("Trebuchet MS")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_g32i8"]
font_names = PackedStringArray("Constantia")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_478bo"]
font_names = PackedStringArray("Constantia")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_plowj"]
font_names = PackedStringArray("Constantia")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_5hdkk"]
resource_name = "play_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggnsx"]
_data = {
"play_game": SubResource("Animation_5hdkk")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64u2j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jmh02")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_vlcng")
theme_override_font_sizes/font_size = 64
text = "Quem é?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Espaçador" type="Control" parent="MarginContainer/VBoxContainer/Titulo"]
layout_mode = 2
anchors_preset = 0
offset_top = -60.0
offset_right = 1128.0
offset_bottom = -60.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_right = 250

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0
alignment = 1

[node name="Espaçador13" type="Control" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Espaçador14" type="Control" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Espaçador15" type="Control" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 18
alignment = 1

[node name="Jogar" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_g32i8")
theme_override_font_sizes/font_size = 32
text = "Jogar"

[node name="Espaçador3" type="Control" parent="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Opcoes" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_478bo")
theme_override_font_sizes/font_size = 32
text = "Opções"

[node name="Espaçador4" type="Control" parent="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Sair" type="Button" parent="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_plowj")
theme_override_font_sizes/font_size = 32
text = "Sair"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dsvls")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ggnsx")
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -648.0
offset_right = 1152.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/Opcoes" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
